--- a/chrome/tweaks/hide-tabs-bar.css
+++ b/chrome/tweaks/hide-tabs-bar.css
@@ -74,7 +74,8 @@
   @media (-moz-platform: windows) {
     /* Offset navbar contents to make space for the window controls */
     &:where([inFullscreen], [tabsintitlebar]) #nav-bar {
-      padding-inline-end: calc(140px + var(--uc-titlebar-drag-space)) !important;
+      padding-inline-end: 0px;
+      margin-inline-end: calc(140px + var(--uc-titlebar-drag-space)) !important;
 
       /* Remove the padding from the side of the navbar */
       & #PanelUI-menu-button {
